Reduce the frame extraction rate

--- a/notebooks/extract_frames_from_videos.ipynb
+++ b/notebooks/extract_frames_from_videos.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "tags": []
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7710acfe-b94d-4e54-a688-19010ce620b8",
    "metadata": {
     "tags": []
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "788fea6c-b056-4344-902b-3aa5f324deac",
    "metadata": {
     "tags": []
@@ -243,7 +243,7 @@
        "5          34.0   235.0     5     1     4     2     3  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4c56c73b-4fec-4358-988f-e4ea9065b8d5",
    "metadata": {
     "tags": []
@@ -284,7 +284,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3e51e67556f497391df40a04847aefe",
+       "model_id": "846f937772ca414f8a07e8bbe66702d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,13 +316,123 @@
       "[DEBUG] FPS=30.0\n",
       "[DEBUG] FPS=30.0\n",
       "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 10\n",
       "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 11\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 12\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 13\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 14\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 15\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 16\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 17\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 18\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 19\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 1\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 20\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 21\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 22\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 23\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 24\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 25\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 26\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 27\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 28\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 29\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 2\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 30\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 31\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 32\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 33\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 34\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 35\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 36\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 37\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 38\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 39\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 3\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 40\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 41\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 42\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 43\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 44\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 45\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 47\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 48\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 49\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 4\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 50\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 51\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 52\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 53\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 54\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 55\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 5\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 6\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 7\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 8\n",
+      "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 9\n",
       "[DEBUG] FPS=30.0\n"
      ]
     }
    ],
    "source": [
     "# extract the frames \n",
+    "IS_SINGLE_CAMERA = True\n",
+    "CAMERA_ID = 1\n",
+    "\n",
+    "\n",
     "video_files = [x for x in os.listdir(VIDEO_DATA_PATH)]\n",
     "\n",
     "\n",
@@ -336,6 +446,10 @@
     "    \n",
     "    if video_file in video_file2extracted_num:  # skip the processed video\n",
     "        continue\n",
+    "    if IS_SINGLE_CAMERA:  # skip the unexpected camera \n",
+    "        camera_id = int(video_file.split('.')[0][-1])\n",
+    "        if camera_id != CAMERA_ID:\n",
+    "            continue \n",
     "        \n",
     "    is_fall = 'Fall' in video_file\n",
     "    if is_fall:  # extract the durations of fall\n",
@@ -362,18 +476,19 @@
     "                break     \n",
     "            prog_bar.update(1)\n",
     "            if fall_seconds <= frame_counter // FRAMES_PER_SECOND <= end_seconds:  # extract the falling frames\n",
-    "                cv2.imwrite(os.path.join(OUTPUT_FRAMES_PATH, file_name + f'_{frame_counter}_fall.jpg'), frame)\n",
-    "                recorded_frame_num += 1\n",
+    "                if frame_counter % 3 == 0:  # extracted at 10fps\n",
+    "                    cv2.imwrite(os.path.join(OUTPUT_FRAMES_PATH, file_name + f'_{frame_counter}_fall.jpg'), frame)\n",
+    "                    recorded_frame_num += 1\n",
     "            elif frame_counter // FRAMES_PER_SECOND > end_seconds:  # skip the remaining periods for faster processing\n",
     "                break\n",
     "            frame_counter += 1\n",
-    "    else:  # extract frames at low sampling rate i.e., 1 fps\n",
+    "    else:  # extract frames at low sampling rate i.e., 0.2 fps\n",
     "        while cap.isOpened():\n",
     "            ret, frame = cap.read()\n",
     "            if not ret:  # when the video is finished\n",
     "                break  \n",
     "            prog_bar.update(1)\n",
-    "            if frame_counter % FRAMES_PER_SECOND == 0:\n",
+    "            if frame_counter % (FRAMES_PER_SECOND * 15) == 0:\n",
     "                cv2.imwrite(os.path.join(OUTPUT_FRAMES_PATH, file_name + f'_{frame_counter}_unfall.jpg'), frame)\n",
     "                recorded_frame_num += 1\n",
     "            frame_counter += 1\n",
