Refactor the camera id parameter in extract_frames_from_videos.ipynb

--- a/notebooks/extract_frames_from_videos.ipynb
+++ b/notebooks/extract_frames_from_videos.ipynb
@@ -36,9 +36,12 @@
    "outputs": [],
    "source": [
     "# hyper-parameters \n",
+    "IS_SINGLE_CAMERA = True\n",
+    "CAMERA_ID = 5\n",
+    "\n",
     "META_DATA_PATH = '../data/Data_Description.xlsx'\n",
     "VIDEO_DATA_PATH = '../data/Fall_Simulation_Data/'\n",
-    "OUTPUT_FRAMES_PATH = '../data/Frames_Extracted/'\n",
+    "OUTPUT_FRAMES_PATH = f'../data/Frames_Extracted_Camera{CAMERA_ID}/'\n",
     "\n",
     "\n",
     "FRAMES_PER_SECOND = 30"
@@ -263,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8a6407cf-b567-430b-b0f2-3116f6c94f2d",
    "metadata": {
     "tags": []
@@ -275,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4c56c73b-4fec-4358-988f-e4ea9065b8d5",
    "metadata": {
     "tags": []
@@ -284,7 +287,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "846f937772ca414f8a07e8bbe66702d6",
+       "model_id": "5ea3d9d6c23c4ff0a5792ac112bb27b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -394,6 +397,8 @@
       "[DEBUG] FPS=30.0\n",
       "DEBUG: processing Fall Scenario 45\n",
       "[DEBUG] FPS=30.0\n",
+      "DEBUG: processing Fall Scenario 46\n",
+      "[DEBUG] FPS=30.0\n",
       "DEBUG: processing Fall Scenario 47\n",
       "[DEBUG] FPS=30.0\n",
       "DEBUG: processing Fall Scenario 48\n",
@@ -429,10 +434,6 @@
    ],
    "source": [
     "# extract the frames \n",
-    "IS_SINGLE_CAMERA = True\n",
-    "CAMERA_ID = 1\n",
-    "\n",
-    "\n",
     "video_files = [x for x in os.listdir(VIDEO_DATA_PATH)]\n",
     "\n",
     "\n",
@@ -501,7 +502,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7e1734d6-908e-4100-b0b9-36a528a52301",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "video_file2extracted_num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fa7ccf17-d0e0-45a2-bdec-0564f28d5fd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.path.join(OUTPUT_FRAMES_PATH, file_name + f'_{frame_counter}_fall.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00319b43-cc75-4349-8afb-bd06371ec248",
    "metadata": {},
    "outputs": [],
    "source": []
